chore: Exclusão de repositórios

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
         margin-top: 20px;
       }
 
+      li a {
+        margin-right: 10px
+      }
+
       img {
         width: 80px;
         float: left;
@@ -38,6 +42,7 @@
     <form id="repo-form">
       <input type="text" name="repository" id="repo-input">
       <button type="submit" id="repo-button">Adicionar Repositório</button>
+    
     </form>
 
     <ul id="repo-list">
